--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="hero">
     <h2>{{hero.name | uppercase}} Details</h2>
-    <div>id: {{hero.id}}</div>
+    <div><span>id:</span>{{hero.id}}</div>
     <div>
         <label for="hero-name">Hero Name: </label>
         <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
