--- a/src/app/heroes/heroes.component.sass
+++ b/src/app/heroes/heroes.component.sass
@@ -1,4 +1,4 @@
-/* HeroesComponent's private saSS styles
+/* HeroesComponent's private CSS styles
 
 .heroes
   margin: 0 0 2em 0
@@ -7,52 +7,43 @@
   width: 15em
 
   li
-    display: flex
-
-  button
-    flex: 1
-    cursor: pointer
     position: relative
-    left: 0
+    cursor: pointer
+
+    &:hover
+      left: .1em
+
+  a
+    color: #333
+    text-decoration: none
     background-color: #EEE
     margin: .5em
-    padding: 0
+    padding: .3em 0
+    height: 1.6em
     border-radius: 4px
-    display: flex
-    align-items: stretch
-    height: 1.8em
+    display: block
+    width: 100%
 
     &:hover
       color: #2c3a41
       background-color: #e6e6e6
-      left: .1em
 
     &:active
       background-color: #525252
       color: #fafafa
 
-    &.selected
-      background-color: black
-      color: white
-
-      &:hover
-        background-color: #505050
-        color: white
-
-      &:active
-        background-color: black
-        color: white
-
   .badge
     display: inline-block
     font-size: small
     color: white
-    padding: 0.4em 0.7em 0.4em 0.7em
+    padding: 0.8em 0.7em 0 0.7em
     background-color: #405061
     line-height: 1em
+    position: relative
+    left: -1px
+    top: -4px
+    height: 1.8em
+    min-width: 16px
+    text-align: right
     margin-right: .8em
     border-radius: 4px 0 0 4px
-    align-self: center
-
-  .name
-    align-self: center
